# algo-pipeline

./: .env.example  .gitignore  README.md  check_setup.py  main.py  persona.json  prd_trackpad_controller.md  proxy_router.py  pyproject.toml  requirements.txt  run_daily.bat  run_on_login.bat  script_0.js  script_0_lines.txt  script_1.js  setup_instagram.py  start_services.bat  start_services.ps1
agent/: orchestrator.py  prompts.py  tools.py
config/: persona.json  settings.py
content/: generator.py  models.py
renderer/: card_renderer.py  effects.py  layout_engine.py
research/: keyword_analyzer.py  news_scraper.py  trend_scraper.py
scripts/: backfill_ig_ids.py  backfill_meta.py  capture_dashboard.py  catbox_upload.py  export_meta.py  get_ig_token.py  pick_topic.py  refresh_ig_token.py  run_daily.py  run_on_login.py  sync_ig_status.py
src/: config.py  db.py  persona.py  pipeline.py  scheduler.py  telegram_bot.py
src/agents/: analytics.py  angle_selector.py  approval.py  blog_publisher.py  comment_manager.py  competitor_analyzer.py  content_creator.py  content_queue.py  design_renderer.py  design_templates.py  dm_manager.py  fact_checker.py  image_searcher.py  news_collector.py  publisher.py  threads_publisher.py  topic_refiner.py  trend_analyzer.py  verifier.py  video_renderer.py  youtube_fetcher.py
src/dashboard/: app.py
src/schemas/: card_news.py
src/utils/: text_utils.py
styles/: style_manager.py
styles/profiles/: bold_gradient.json  dark_modern.json  editorial.json  minimalist.json  pastel_soft.json
