[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cardnews-agent"
version = "0.1.0"
description = "AI 에이전트 기반 인스타그램 카드뉴스 자동화"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pillow>=12.0.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.13.0",
    "playwright>=1.56.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
    "typer>=0.20.0",
    "rich>=14.0.0",
]

[project.scripts]
cardnews = "main:app"
